# datahub-1c-metadata-catalog

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md
1c-metadata-service/: manual-lineage.md
custom-models/: .gitignore  README.md  build.gradle  settings.gradle
datahub/: .env.example  .gitignore  README.md  pyproject.toml
datahub/scripts/: check_custom_models.py  pg_tables_pattern.py  reference_ingest.py  validate_configdump.py
datahub/src/datahub_1c/: __init__.py  config.py  source.py
datahub/src/datahub_1c/api/: __init__.py  client.py  models.py
datahub/src/datahub_1c/mapping/: __init__.py  browse_paths.py  containers.py  custom_aspects.py  datasets.py  db_mapping.py  integration_services.py  kind_properties.py  lineage.py  metadata_uuid.py  platform.py  relationships.py  schema_fields.py  standard_attributes.py  tabular_parts.py  translit.py  urn.py
datahub/tests/integration/: one_source_mcp_golden.json  test_onec_source_golden.py
datahub/tests/unit/: test_api_client.py  test_api_models.py  test_check_custom_models.py  test_config.py  test_custom_models_auto_render.py  test_mapping_containers.py  test_mapping_custom_aspects.py  test_mapping_datasets.py  test_mapping_db_mapping.py  test_mapping_integration_services.py  test_mapping_kind_properties.py  test_mapping_lineage.py  test_mapping_platform.py  test_mapping_relationships.py  test_mapping_schema_fields.py  test_mapping_tabular_parts.py  test_metadata_uuid.py  test_pg_tables_pattern.py  test_reference_deployment_files.py  test_reference_ingest.py  test_source.py  test_standard_attributes.py  test_translit.py  test_urn.py  test_validate_configdump.py
docs/: project-structure.md
onec-metadata-explorer-mfe/: README.md  mfe.config.example.yaml  package-lock.json  package.json  tsconfig.json  webpack.config.js
(+56 files in other folders)
